[package]
name = "fix-path-env"
version = "0.0.0"
authors = ["Tauri Programme within The Commons Conservancy"]
license-file = "LICENSE"
edition = "2021"

[dependencies]
thiserror = { version = "1" }
home = { version = "0.5" }

[target."cfg(not(target_os = \"windows\"))".dependencies]
strip-ansi-escapes = "0.2"
